# enki_cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: auth.rs  claude_code.rs  config.rs  link.rs  main.rs  update.rs
